#17707 fixing scrollbar

--- a/src/app/view/components/main-legacy/main-legacy.component.scss
+++ b/src/app/view/components/main-legacy/main-legacy.component.scss
@@ -22,7 +22,8 @@
 
 .layout__main,
 .layout__sidebar {
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .layout__main {
